# logl

./: .gitignore  CMakeLists.txt  Dockerfile  docker.sh  main.cpp
.devcontainer/: devcontainer.json
shaders/: basic_vertex.glsl
src/include/: CMakeLists.txt  window.h
src/pkg/fs/: file.hpp
src/pkg/shade/: CMakeLists.txt
src/pkg/shade/__test__/: shade_class_test.cpp
src/pkg/shade/impl/: shade.cpp
src/pkg/shade/include/: shade.h  traits.h
src/shaders/: CMakeLists.txt  basic_vertex.glsl  simple_color.glsl
